--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,7 +178,8 @@
 </style>
 
 <main class="main">
-  <app-login></app-login>
+<!--  <app-login></app-login>-->
+  <app-home></app-home>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
