--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,93 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #E0FFFF;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+}
+div {
+  margin-top: 1%;
+  text-align: center;
+}
+#div_with_form {
+  margin-top: 40%;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  padding:0;
+}
+select {
+  font-size: 19px;
+  width: 13%;
+  font-family: Georgia, Times New Roman, Times, serif;
+}
+/*table {*/
+/*  width: 100%;*/
+/*  border-collapse: collapse;*/
+/*  margin:0;*/
+/*  padding:0;*/
+/*  border: none;*/
+/*  outline: none;*/
+/*  line-height:0;*/
+/*  table-layout: fixed;*/
+/*}*/
+td {
+  width: 10%;
+  vertical-align: middle;
+  text-align: center;
+  word-break: break-word;
+}
+th {
+  word-break: break-word;
+  background-color: #1E90FF;
+  height: 100px;
+}
+.button {
+  font-size: 19px;
+  margin-top: 1%;
+  background-color: #1E90FF;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-family: Georgia, Times New Roman, Times, serif;
+  width: 150px;
+  height: 30px;
+}
+canvas {
+  border: 2px solid #000000;
+  border-radius: 30px;
+}
+input[type="text"], input[type="password"] {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
+  border-radius: 10px;
+  text-align: center;
+  outline: 2px solid #1E90FF;
+  border: none;
+  width: 200px;
+  height: 20px;
+}
+.error {
+  color: #FF0000;
+  font-weight: bold;
+  font-size: 17px;
+}
+.home_div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.submit {
+  font-weight: bold;
+  font-size: 22px;
+  margin-top: 2%;
+  background-color: #1E90FF;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-family: Georgia, Times New Roman, Times, serif;
+  width: 150px;
+  height: 35px;
+}
